--- a/vercel.json
+++ b/vercel.json
@@ -1,24 +1,5 @@
 {
-  "buildCommand": "npm run build",
-  "outputDirectory": "dist",
-  "installCommand": "npm install",
-  "framework": null,
-  "trailingSlash": true,
-  "headers": [
-    {
-      "source": "/assets/(.*)",
-      "headers": [
-        { "key": "Cache-Control", "value": "public, max-age=31536000, immutable" }
-      ]
-    },
-    {
-      "source": "/(.*).xml",
-      "headers": [
-        { "key": "Content-Type", "value": "application/xml" }
-      ]
-    }
-  ],
-  "rewrites": [
-    { "source": "/:path*/", "destination": "/:path*/index.html" }
-  ]
+  "framework": "nextjs",
+  "buildCommand": "next build",
+  "installCommand": "npm install"
 }
